--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22.19.0'
+          node-version: '22.12.0'
+          cache: 'npm'
+      
+      - name: Show versions
+        run: |
+          node -v
+          npm -v
 
       - name: Install dependencies
         run: npm ci
