--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "health-dashboard",
-  "version": "0.3.8",
+  "version": "0.3.9",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:ci": "ng test --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint"
   },
   "prettier": {
@@ -23,12 +24,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.2.0",
-    "@angular/compiler": "^20.2.0",
-    "@angular/core": "^20.2.0",
-    "@angular/forms": "^20.2.0",
-    "@angular/platform-browser": "^20.2.0",
-    "@angular/router": "^20.2.0",
+    "@angular/common": "20.2.1",
+    "@angular/compiler": "20.2.1",
+    "@angular/core": "20.2.1",
+    "@angular/forms": "20.2.1",
+    "@angular/platform-browser": "20.2.1",
+    "@angular/router": "20.2.1",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.6",
@@ -39,10 +40,11 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.2.0",
-    "@angular/cli": "^20.2.0",
-    "@angular/compiler-cli": "^20.2.0",
-    "@angular/localize": "^20.2.0",
+    "@angular-devkit/build-angular": "^20.2.1",
+    "@angular/build": "20.2.1",
+    "@angular/cli": "20.2.1",
+    "@angular/compiler-cli": "20.2.1",
+    "@angular/localize": "20.2.1",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "20.2.0",
     "eslint": "^9.33.0",
